--- a/sijpinner/test.html
+++ b/sijpinner/test.html
@@ -2,9 +2,13 @@
 
 <html>
 <head>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript" >
+
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"
+        type="text/javascript" >
 </script>
-<link rel="stylesheet" href="http://getbootstrap.com/2.3.2/assets/css/bootstrap.css">
+<link rel="stylesheet"
+      href="http://getbootstrap.com/2.3.2/assets/css/bootstrap.css">
+
 <script src="http://getbootstrap.com/2.3.2/assets/js/bootstrap.js"></script>
 
 <script src="./js/sijpinner.js" type="text/javascript" >
